--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script defer src="js/task01.js"></script>
-  <!-- <script defer src="js/task02.js"></script> -->
-  <!-- <script defer src="js/task03.js"></script> -->
+  <script defer src="js/task02.js"></script>
+  <script defer src="js/task03.js"></script>
   <title>JavaScript</title>
 </head>
 <body>
